--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
+    "lucide-react": "^0.562.0",
     "papaparse": "^5.5.3",
     "pdfjs-dist": "^5.4.530",
     "plotly.js": "^3.3.1",
